--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "sequelize": "^6.29.3",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^16.0.3"
+    "sequelize": "^6.29.3"
+  },
+  "devDependencies": {
+    "cypress": "^14.1.0"
   }
 }
