--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "express": "^4.18.2",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
-    "cypress": "^14.1.0"
+    "cypress": "^14.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
